--- a/ZMYH.html
+++ b/ZMYH.html
@@ -1,52 +1,183 @@
-    <head> 
+<html lang="zh-CN">
+
+<head>
     <title>547>载梦远航</title>
     <!-- Metadata -->
-    <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
+    <meta name="keywords" content="547班, 隆安中学" />
     <meta name="description" content="隆安中学本部校区高547班官网" />
     <meta charset="utf-8">
     <!-- OpenGraph Metadata-->
     <meta property="og:title" content="547的小网站">
     <meta property="og:description" content="隆安中学高547班官网" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://lazx547.us.kg" />
-  
+
     <link rel="icon" href="2024547.ico" type="image/x-icon">
     <link rel="stylesheet" async href="style.css">
-    </head>
-    <body>
-        <div style="background-color:#DCDCDC;height: 102;" class="center">
-            <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
-                <object style="border:0px;min-width: 600;max-width: 1200;" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+    <link rel="stylesheet" async href="audio1.css">
+    <link rel="stylesheet" async href="tooltip.css">
+</head>
+
+<body>
+    <div id="heard" style="background-color:var(--nav-bg-color);height: 102;" class="center">
+        <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
+            <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
+                class="center">
+                <div id="menu" style="width:60px;height:60px;float:left;">
+                    <a href="index.html" target="_top">
+                        <img src="images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                    </a>
+                </div>
+                <div style="height:60px;float:left;">
+                    <h1 style="font-size: 40px;margin-block-start: 5px;">隆安中学高547班官网</h1>
+                </div>
+                <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+                    <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
+                        <img id="github_ico" src="images/github.png" style="width:35px;height:35px;" class="github">
+                    </a>
+                </div>
+                <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+                    <a href="https://lazx547.github.io" target="_blank">
+                        <img id="githubpage_ico" src="images/githubpage.png" style="width:40px;height:40px;">
+                    </a>
+                </div>
+                <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+                    <a href="https://lazxg547b.pages.dev" target="_blank">
+                        <img src="images/cloudflare.png" style="width:40px;height:40px;">
+                    </a>
+                </div>
+                <div style="float:right;width: 40;height: 40;">
+                </div>
+                <div>
+                    <button style="float:right;width: 40;height: 40;border-radius: 5%;" id="theme-toggle">
+                        <img src="images/light.png" style="width:40px;height:40px;" id="theme-toggle-img">
+                    </button>
+                </div>
+                <div style="float:right;width: 40;height: 40;"></div>
             </div>
+            <hr
+                style="border-width:0;color:#999999;background-color:#999999;margin-block-start: 0;margin-block-end: 0;height: 2;">
+            <ul style="height: 40;">
+                <li><a class="dis_a" target="_top" href="index.html" style="padding: 10px 0;width: 60;">主页</a></li>
+                <li><a class="dis_a" target="_top" href="DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
+                <li><a class="dis_a" target="_top" href="ZMYH.html" style="padding: 10px 0;width: 80;">载梦远航</a></li>
+                <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
+            </ul>
         </div>
-        <br style="height: 20;">
-        <div class="center" style="width: 870;height: 600;background-color: #f6f6f7;margin: auto;" id="zmyh">
-            <div style="float: left;border-left: 6px solid #162e6a;clear: both;">
-                <h1 style="position: relative;left: 20;;">载梦远航</h1>
+    </div>
+    <br style="height: 20;">
+    <div class="center" style="width: 870;height: 670;background-color: var(--div-bg-color);margin: auto;" id="zmyh">
+        <div style="float: left;border-left: var(--solid-border);clear: both;">
+            <h1 style="position: relative;left: 20;;">载梦远航</h1>
+        </div>
+        <div style="width: 780;height: 50;"><img src=""></div>
+        <div class="center" style="width: 760;height: 620;">
+            <div style="width: 480;height: 620;float: left;">
+            <div style="width: 470;height: 450;">
+                <div style="width: 470;height: 20;"></div>
+                <a  class="tooltip" href="https://wwqb.lanzout.com/b00occ700h" target="_blank">
+                    <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:400;height:400;">
+                    <span class="tooltiptext">点击图片下载无损文件，密码0000</span>
+                </a>
             </div>
-            <div style="width: 780;height: 43;"><img src=""></div>
-            <div style="width: 480;height: 550;float: left;">
-                <a href="https://wwqb.lanzout.com/b00occ700h" target="_blank">
-                    <img src="https://p2.music.126.net/yQ-PxRIyuciwLP4QAbbucQ==/109951166554570690.jpg?param=1000y1000" style="width:470;height:470;">
-                    <p>隆安中学校歌</p>
-                </a>   
-                <audio controls="" style="height:60;width:480">
-                    <source src="http://music.163.com/song/media/outer/url?id=1405575019.mp3" type="audio/mpeg">
+            <div class="audio-player">
+                <div class="progress-container" id="progress-container">
+                    <div class="progress-bar" id="progress-bar"></div>
+                    <div class="progress-handle" id="progress-handle"></div>
+                </div>
+
+                <!-- 时间显示 -->
+                <div class="time-display">
+                    <span id="current-time">0:00</span>
+                    <span id="duration">0:00</span>
+                </div>
+
+                <!-- 控制按钮 -->
+                <div class="controls">
+                    <div class="playback-controls">
+                        <button class="control-btn" id="rewind" title="后退10秒">
+                            <svg viewBox="0 0 24 24">
+                                <path
+                                    d="M11.99 5V1l-5 5 5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6h-2c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z" />
+                            </svg>
+                        </button>
+
+                        <button class="control-btn" id="play-pause" title="播放/暂停">
+                            <svg viewBox="0 0 24 24" id="play-icon">
+                                <path d="M8 5v14l11-7z" />
+                            </svg>
+                            <svg viewBox="0 0 24 24" id="pause-icon" style="display: none;">
+                                <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
+                            </svg>
+                        </button>
+
+                        <button class="control-btn" id="fast-forward" title="前进10秒">
+                            <svg viewBox="0 0 24 24">
+                                <path
+                                    d="M12.01 5V1l5 5-5 5V7c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6h2c0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8z" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="volume-control">
+                        <svg viewBox="0 0 24 24" width="24" height="24" fill="var(--text-color)">
+                            <path
+                                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z" />
+                        </svg>
+                        <input type="range" class="volume-slider" id="volume" min="0" max="1" step="0.01" value="1"
+                            title="音量调节">
+                    </div>
+                </div>
+
+                <div class="status-indicator" id="status-indicator" style="display: none;">准备就绪</div>
+
+                <!-- 隐藏的音频元素 -->
+                <audio id="audio-element">
+                    <source src="http://music.163.com/song/media/outer/url?id=1889689137.mp3" type="audio/mpeg">
+                    您的浏览器不支持音频元素。
                 </audio>
-                <div style="height: 20;"></div>
             </div>
-            <div style="width: 280;height: 550;float: left;">
-                <div style="width: 240;height: 550;">
-                    <object  style="border:2px solid #b6b6b6;border-radius: 20px;" type="text/x-scriptlet" data="lrc/ZMYH_LRC.html" width="100%" height="100%"></object>
+
+            <div class="debug-info" style="display: none;">
+                <div class="debug-title">调试信息（显示进度条状态）</div>
+                <div class="debug-content">
+                    <div id="debug-seeking">用户调整: 否</div>
+                    <div id="debug-timeupdate">最后更新: 0ms 前</div>
+                    <div id="debug-position">当前位置: 0%</div>
                 </div>
             </div>
         </div>
-        <div style="width: auto;height: 20;"></div>
-        <div>
-            <div style="background-color:#DCDCDC;height: 45;margin: 0;padding: 0;" class="center">
-                <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="45" style="overflow: hidden;position: relative;"></object>                
+        <div style="width: 280;height: 550;float: left;">
+            <div style="width: 240;height: 600;" class="border_div">
+                <div style="width: 230;height: 600;" class="scroll-container">
+                    <h3 style="margin-block-start: 0em;margin-block-end: 0em;">歌词</h3>
+                    <p style="margin-block-start: 0em;margin-block-end: 0em;font-size: 17;">
+                        作曲:陈爱锦<br>编曲：陈若平<br>混音：庄启滔<br>母带工程师：全相彦<br>监制：庄启滔<br>榜山苍苍，右江汤汤<br>圣哲肇启，涵沐未央<br>植柏树梁，惟序惟庠<br>心系桃李，身许国邦<br>士风儒习蒸蒸日上<br>厚德博学荫育吾乡<br>师心一缕载梦远航<br>远航，远航，<br>师心一缕载梦远航<br>学宫煌煌，书院琅琅<br>后昆承续，立誓翱翔<br>以铸以陶，济济一堂<br>吟咏不辍，日就月将<br>砥砺琢磨奋进如桨<br>明理至善我辈自强<br>文脉千年成就梦想<br>梦想，梦想<br>文脉千年成就梦想<br>士风儒习蒸蒸日上<br>厚德博学荫育吾乡<br>师心一缕载梦远航<br>远航，远航，<br>师心一缕载梦远航<br>师心一缕载梦远航
+                    </p>
+                </div>
             </div>
         </div>
-    </body>
+        </div>
+    </div>
+    <div style="width: auto;height: 20;"></div>
+    <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
+        <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
+            <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
+                <img src="images/2024547.jpg"
+                    style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
+                <p style="float: left;font-size: 30;">547web</p>
+            </div>
+            <div style="float: left;width: 40%;background-color:var(--nav-bg-color);" class="center">
+                <p>lazx547</p>
+                <p>since 2024.10.1</p>
+            </div>
+            <div style="float: left;width: 40%;background-color:var(--nav-bg-color);" class="center">
+                <p>Email：lazxg547b@Outlook.com</p>
+                <p id="version" class="center">v-</p>
+            </div>
+        </div>
+    </div>
+    <script src="./script.js"></script>
+    <script src="audio1.js"></script>
+</body>
+
 </html>
-        
