--- a/about.html
+++ b/about.html
@@ -1,135 +1,198 @@
-<html>
-    <head> 
-        <title>547>关于</title>
-        <!-- Metadata -->
-        <meta name="keywords" content="547班, 隆安中学, 成都七中, 东方闻道网校" />
-        <meta name="description" content="隆安中学本部校区高547班官网" />
-        <meta charset="utf-8">
-        <!-- OpenGraph Metadata-->
-        <meta property="og:title" content="547的小网站">
-        <meta property="og:description" content="隆安中学高547班官网" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://lazx547.us.kg" />
-  
-        <link rel="icon" href="2024547.ico" type="image/x-icon">
-        <link rel="stylesheet" async href="./style.css">
-        <style>
-            .aa{
-                border:1px solid #6b6b6b;
-            }
-            .aa :hover{
-                border: 1px solid #999999;
-            }
-        </style>
-    </head>
-    <body>
-        <div style="background-color:#DCDCDC;height: 102;" class="center">
-            <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
-                <object style="border:0px;min-width: 600;max-width: 1200;" type="text/x-scriptlet" data="hear.html" width="100%"></object>
+<html lang="zh-CN">
+
+<head>
+    <title>547>关于</title>
+    <!-- Metadata -->
+    <meta name="keywords" content="547班, 隆安中学" />
+    <meta name="description" content="隆安中学本部校区高547班官网" />
+    <meta charset="utf-8">
+    <!-- OpenGraph Metadata-->
+    <meta property="og:title" content="547的小网站">
+    <meta property="og:description" content="隆安中学高547班官网" />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" href="2024547.ico" type="image/x-icon">
+    <link rel="stylesheet" async href="./style.css">
+    <style>
+        .aa {
+            border: 1px solid #6b6b6b;
+        }
+
+        .aa :hover {
+            border: 1px solid #999999;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div id="heard" style="background-color:var(--nav-bg-color);height: 102;" class="center">
+        <div style="max-width: 1200;min-width: 600;margin: 0 auto;">
+            <div id="header" style="background-color:var(--nav-bg-color);height:60;min-width: 600;max-width: 1200;"
+                class="center">
+                <div id="menu" style="width:60px;height:60px;float:left;">
+                    <a href="index.html" target="_top">
+                        <img src="images/2024547.jpg" style="width:60px;height:60px;" class="ico">
+                    </a>
+                </div>
+                <div style="height:60px;float:left;">
+                    <h1 style="font-size: 40px;margin-block-start: 5px;">隆安中学高547班官网</h1>
+                </div>
+                <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+                    <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
+                        <img id="github_ico" src="images/github.png" style="width:35px;height:35px;" class="github">
+                    </a>
+                </div>
+                <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+                    <a href="https://lazx547.github.io" target="_blank">
+                        <img id="githubpage_ico" src="images/githubpage.png" style="width:40px;height:40px;">
+                    </a>
+                </div>
+                <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+                    <a href="https://lazxg547b.pages.dev" target="_blank">
+                        <img src="images/cloudflare.png" style="width:40px;height:40px;">
+                    </a>
+                </div>
+                <div style="float:right;width: 40;height: 40;">
+                </div>
+                <div>
+                    <button style="float:right;width: 40;height: 40;border-radius: 5%;" id="theme-toggle">
+                        <img src="images/light.png" style="width:40px;height:40px;" id="theme-toggle-img">
+                    </button>
+                </div>
+                <div style="float:right;width: 40;height: 40;"></div>
+            </div>
+            <hr
+                style="border-width:0;color:#999999;background-color:#999999;margin-block-start: 0;margin-block-end: 0;height: 2;">
+            <ul style="height: 40;">
+                <li><a class="dis_a" target="_top" href="index.html" style="padding: 10px 0;width: 60;">主页</a></li>
+                <li><a class="dis_a" target="_top" href="DXMB.html" style="padding: 10px 0;width: 80;">大学目标</a></li>
+                <li><a class="dis_a" target="_top" href="ZMYH.html" style="padding: 10px 0;width: 80;">载梦远航</a></li>
+                <li><a class="dis_a" target="_top" href="about.html" style="padding: 10px 0;width: 60;">关于</a></li>
+            </ul>
+        </div>
+    </div>
+    <br style="height: 20;">
+    <div class="center">
+        <div style="width: 200;background-color: var(--div-bg-color);margin: auto;border-left: var(--solid-border)">
+            <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
+                <h1>查看源代码</h1>
+            </a>
+        </div>
+        <br style="height: 20;">
+        <div style="max-width: 1000;min-width: 300;margin: auto;background-color: var(--div-bg-color);">
+            <div style="float: left;border-left: var(--solid-border)">
+                <h1 style="position: relative;left: 20;">链接与服务器</h1>
+            </div>
+            <br style="width: 900;clear: both;">
+            <p>你可以通过多个链接访问547官网</p>
+            <div class="div_a">
+                <div class="subd_a" style="width: 300;">
+                    <a href="https://lazx547.github.io" target="_blank">
+                        <h2>Github Page</h2>
+                        <img src="images/github.png" style="width:80px;height:80px;" class="github">
+                        <br>
+                        <p><u>lazx547.github.io</u></p>
+                    </a>
+                </div>
+                <div class="subd_a" style="width: 300;">
+                    <a href="https://lazxg547b.pages.dev/" target="_blank">
+                        <h2>Cloudflare Page</h2>
+                        <img src="images/cloudflare.png" style="width:80px;height:80px;">
+                        <br>
+                        <p><u>lazxg547b.pages.dev</u></p>
+                    </a>
+                </div>
+            </div>
+            <br style="height: 10;">
+        </div>
+        <br style="height: 20;">
+        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+            <div style="float: left;border-left: var(--solid-border)">
+                <h1 style="position: relative;left: 20;">程序</h1>
+            </div>
+            <br style="clear: both;">
+            <div class="div_a">
+                <div class="subd_a" style="width: 300;">
+                    <h2>547DesktopTool</h2>
+                    <img src="images/547dt.png" style="width:80px;height:80px;">
+                    <p>547桌面工具</p>
+                    <p>
+                        <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
+                        <a href="https://github.com/lazx547/547DesktopTool/releases" target="_blank">下载</a>
+                    </p>
+                </div>
+            </div>
+            <br style="height: 10;">
+        </div>
+        <br style="height: 20;">
+        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+            <div style="float: left;border-left: var(--solid-border)">
+                <h1 style="position: relative;left: 20;">受保护的网页</h1>
+            </div>
+            <br style="clear: both;">
+            <a href="protect/student.html" target="_blank">
+                <h2>547班学生名单</h2>
+            </a>
+            <a href="protect/alls.html" target="_blank">
+                <h2>24级学生名单</h2>
+            </a>
+        </div>
+        <br style="height: 20;">
+        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+            <div style="float: left;border-left: var(--solid-border)">
+                <h1 style="position: relative;left: 20;">链接</h1>
+            </div>
+            <br style="clear: both;">
+            <div class="center">
+                <a href="https://sf-lcx.pages.dev" class="aa" target="_blank">刘慈欣小说集</a>
+                <a href="https://afraidskydream.github.io/" class="aa" target="_blank">尸田</a>
+                <a href="https://space.bilibili.com/1150293211" class="aa" target="_blank">Bilibili:winMCHG31400</a>
+                <a href="http://winmchg31400.github.io/tools" class="aa" target="_blank">winMCHG31400</a>
+                <a href="https://www.cdqz.net/" class="aa" target="_blank">成都七中官网</a>
+                <a href="https://www.cdqz.net/html/cdqz/html/list.html?menuId=c1b22f946fd447eebd6c3c4b37ba99e5"
+                    class="aa" target="_blank">成都七中教育集团</a>
+                <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
+                <a href="https://www.eastedu.com/" class="aa" target="_blank">东方闻道</a>
+                <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
+                <a href="https://www.runoob.com/" class="aa" target="_blank">菜鸟教程</a>
+                <a href="https://www.w3school.com.cn/index.html" class="aa" target="_blank">W3school</a>
+                <a href="https://robinmoisson.github.io/staticrypt/" class="aa" target="_blank">staticrypt</a>
+                <a href="https://11.csy2022.top/" class="aa" target="_blank">11.csy2022.top</a>
+                <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
             </div>
         </div>
         <br style="height: 20;">
-        <div class="center">
-            <div style="width: 200;background-color: #f6f6f7;margin: auto;border-left: 6px solid #162e6a">
-                <a href="https://github.com/lazx547/lazx547.github.io" target="_blank">
-                    <h1>查看源代码</h1>
-                </a>
+        <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: var(--div-bg-color);">
+            <div style="float: left;border-left: var(--solid-border)">
+                <h1 style="position: relative;left: 20;">联系方式</h1>
             </div>
-            <br style="height: 20;">
-            <div style="max-width: 1000;min-width: 300;margin: auto;background-color: #f6f6f7;">
-                <div style="float: left;border-left: 6px solid #162e6a">
-                    <h1 style="position: relative;left: 20;">链接与服务器</h1>
-                </div>
-                <br style="width: 900;clear: both;">
-                <p>你可以通过多个链接访问547官网</p>
-                <div class="div_a">
-                    <div class="subd_a" style="width: 300;">
-                        <a href="https://lazx547.github.io" target="_blank">
-                            <h2>Github Page</h2>
-                            <img src="images/github.png" style="width:80px;height:80px;">
-                            <br>
-                            <p><u>lazx547.github.io</u></p>
-                        </a>
-                    </div>
-                    <div class="subd_a" style="width: 300;">
-                        <a href="https://lazxg547b.pages.dev/" target="_blank">
-                            <h2>Cloudflare Page</h2>
-                            <img src="images/cloudflare.png" style="width:80px;height:80px;">
-                            <br>
-                            <p><u>lazxg547b.pages.dev</u></p>
-                        </a>
-                    </div>
-                </div>
-                <br style="height: 10;">
-            </div>
-            <br style="height: 20;">
-            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: #f6f6f7;">
-                <div style="float: left;border-left: 6px solid #162e6a">
-                    <h1 style="position: relative;left: 20;">程序</h1>
-                </div>
-                <br style="clear: both;">
-                <div class="div_a">
-                    <div class="subd_a" style="width: 300;">
-                        <h2>547choice</h2>
-                        <img src="images/547dt.png" style="width:80px;height:80px;">
-                        <p>547桌面工具</p>
-                        <p>
-                            <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
-                            <a href="https://github.com/lazx547/547DesktopTool/releases" target="_blank">下载</a>
-                        </p>
-                    </div>
-                </div>
-                <br style="height: 10;">
-            </div>
-            <br style="height: 20;">
-            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: #f6f6f7;">
-                <div style="float: left;border-left: 6px solid #162e6a">
-                    <h1 style="position: relative;left: 20;">受保护的网页</h1>
-                </div>
-                <br style="clear: both;">
-                <a href="protect/student.html" target="_blank">
-                    <h2>547班学生名单</h2>
-                </a>
-                <a href="protect/alls.html" target="_blank">
-                    <h2>隆安中学2024级学生名单</h2>
-                </a>
-            </div>
-            <br style="height: 20;">
-            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: #f6f6f7;">
-                <div style="float: left;border-left: 6px solid #162e6a">
-                    <h1 style="position: relative;left: 20;">链接</h1>
-                </div>
-                <br style="clear: both;">
-                <div class="center">
-                    <a href="https://sf-lcx.pages.dev" class="aa" target="_blank">刘慈欣小说集</a>
-                    <a href="https://afraidskydream.github.io/" class="aa" target="_blank">尸田</a>
-                    <a href="http://winmchg31400.github.io/tools" class="aa" target="_blank">winMCHG31400</a>
-                    <a href="https://www.cdqz.net/" class="aa" target="_blank">成都七中官网</a>
-                    <a href="https://www.cdqz.net/html/cdqz/html/list.html?menuId=c1b22f946fd447eebd6c3c4b37ba99e5" class="aa" target="_blank">成都七中教育集团</a>
-                    <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
-                    <a href="https://www.eastedu.com/" class="aa" target="_blank">东方闻道</a>
-                    <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
-                    <a href="https://www.runoob.com/" class="aa" target="_blank">菜鸟教程</a>
-                    <a href="https://www.w3school.com.cn/index.html" class="aa" target="_blank">W3school</a>
-                    <a href="https://robinmoisson.github.io/staticrypt/" class="aa" target="_blank">staticrypt</a>
-                    <a href="https://11.csy2022.top/" class="aa" target="_blank">11.csy2022.top</a>
-                    <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
-                  </div>
-            </div>
-            <br style="height: 20;">
-            <div style="max-width: 1000;min-width: 500;margin: 0 auto;background-color: #f6f6f7;">
-                <div style="float: left;border-left: 6px solid #162e6a">
-                    <h1 style="position: relative;left: 20;">联系方式</h1>
-                </div>
-                <br style="clear: both;">
-                <p style="display: none;">QQ：2946983031</p>
-                <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><br><a href="mailto:2946983031@qq.com">2946983031@qq.com</a></p>
-                <p>Github：<a href="https://github.com/lazx547" target="_blank">lazx547</a></p>
-            </div>
-            <br style="height: 20;">
+            <br style="clear: both;">
+            <p style="display: none;">QQ：2946983031</p>
+            <p>邮箱：<a href="mailto:lazxg547b@outlook.com">lazxg547b@outlook.com</a><br><a
+                    href="mailto:2946983031@qq.com">2946983031@qq.com</a></p>
+            <p>Github：<a href="https://github.com/lazx547" target="_blank">lazx547</a></p>
         </div>
-        <div style="background-color:#DCDCDC;height: 45;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="45" style="overflow: hidden;"></object>
+        <br style="height: 20;">
+    </div>
+    <div id="footr" style="background-color:var(--nav-bg-color);height: 48;">
+        <div id="footer" style="background-color:var(--nav-bg-color);width:1100" class="center">
+            <div style="float: left;width: 20%;background-color:var(--nav-bg-color);">
+                <img src="images/2024547.jpg"
+                    style="width:45px;height:45px;float: left;background-color:var(--nav-bg-color);border-radius: 0;">
+                <p style="float: left;font-size: 30;">547web</p>
+            </div>
+            <div style="float: left;width: 40%;background-color:var(--nav-bg-color);" class="center">
+                <p>lazx547</p>
+                <p>since 2024.10.1</p>
+            </div>
+            <div style="float: left;width: 40%;background-color:var(--nav-bg-color);" class="center">
+                <p>Email：lazxg547b@Outlook.com</p>
+                <p id="version" class="center">v-</p>
+            </div>
         </div>
-    </body>
+    </div>
+    <script src="./script.js"></script>
+</body>
+
 </html>
